Add Aria labels to all images and anchor links

--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
     <header class="site-navigation">
       <!-- Logo -->
       <figure class="page-logo">
-        <a href="index.html">
+        <a
+          href="index.html"
+          aria-label="M-Buildz Logo button that leads to index.html"
+        >
           <img
             src="./assets/logos/m-buildz-logo-200px-0comp.webp"
             alt="M-Buildz Logo"
             title="M-Buildz Logo"
             id="logo"
+            aria-label="M-Buildz Logo"
           />
         </a>
       </figure>
@@ -54,9 +58,15 @@
       <!-- Navigation Menu -->
       <nav id="navigation-menu">
         <ul id="menu">
-          <li class="active"><a href="#hero-section">Home</a></li>
-          <li><a href="#cars">Cars</a></li>
-          <li><a href="#contact-us">Contact Us</a></li>
+          <li class="active">
+            <a href="#hero-section" aria-label="Link to hero section">Home</a>
+          </li>
+          <li><a href="#cars" aria-label="Link to Cars section">Cars</a></li>
+          <li>
+            <a href="#contact-us" aria-label="Link to Conact Us section"
+              >Contact Us</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -79,11 +89,13 @@
                   src="./assets/images/badges/volkswagen-logo.png"
                   height="25"
                   alt="Volkswagen Logo"
+                  aria-label="Volkswagen Logo"
                 />
                 <img
                   src="./assets/images/badges/golf-logo.png"
                   height="20"
                   alt="Golf Logo"
+                  aria-label="Golf Logo"
                 />
               </div>
             </figure>
@@ -96,6 +108,7 @@
                       src="./assets/icons/top-speed.webp"
                       height="20"
                       alt="Top Speed"
+                      aria-label="Top Speed Icon"
                     />203km/h
                   </li>
                   <li>
@@ -103,6 +116,7 @@
                       src="./assets/icons/weight.webp"
                       height="20"
                       alt="Weight"
+                      aria-label="Weight Icon"
                     />1980kg
                   </li>
                   <li>
@@ -110,6 +124,7 @@
                       src="./assets/icons/engine-size.png"
                       height="20"
                       alt="Engine Size"
+                      aria-label="Engine Size Icon"
                     />2.5L Inline 6
                   </li>
                   <li>
@@ -117,6 +132,7 @@
                       src="./assets/icons/power.webp"
                       height="20"
                       alt="Power"
+                      aria-label="Power Icon"
                     />500PS
                   </li>
                 </ul>
@@ -136,11 +152,13 @@
                   src="./assets/images/badges/bmw-logo.webp"
                   height="25"
                   alt="BMW Logo"
+                  aria-label="BMW Logo"
                 />
                 <img
                   src="./assets/images/badges/m5-logo.webp"
                   height="20"
                   alt="M5 Logo"
+                  aria-label="M5 Logo"
                 />
               </div>
             </figure>
@@ -153,6 +171,7 @@
                       src="./assets/icons/top-speed.webp"
                       height="20"
                       alt="Top Speed"
+                      aria-label="Top Speed Icon"
                     />225km/h
                   </li>
                   <li>
@@ -160,6 +179,7 @@
                       src="./assets/icons/weight.webp"
                       height="20"
                       alt="Weight"
+                      aria-label="Weight Icon"
                     />2160kg
                   </li>
                   <li>
@@ -167,6 +187,7 @@
                       src="./assets/icons/engine-size.png"
                       height="20"
                       alt="Engine Size"
+                      aria-label="Engine Size Icon"
                     />3.5L V8
                   </li>
                   <li>
@@ -174,6 +195,7 @@
                       src="./assets/icons/power.webp"
                       height="20"
                       alt="Power"
+                      aria-label="Power Icon"
                     />600PS
                   </li>
                 </ul>
@@ -193,11 +215,13 @@
                   src="./assets/images/badges/honda-logo.webp"
                   height="25"
                   alt="Honda Logo"
+                  aria-label="Honda Logo"
                 />
                 <img
                   src="./assets/images/badges/civic-logo.webp"
                   height="15"
                   alt="Civic Logo"
+                  aria-label="Civic Logo"
                 />
               </div>
             </figure>
@@ -210,6 +234,7 @@
                       src="./assets/icons/top-speed.webp"
                       height="20"
                       alt="Top Speed"
+                      aria-label="Top Speed Icon"
                     />170km/h
                   </li>
                   <li>
@@ -217,6 +242,7 @@
                       src="./assets/icons/weight.webp"
                       height="20"
                       alt="Weight"
+                      aria-label="Weight Icon"
                     />1800kg
                   </li>
                   <li>
@@ -224,6 +250,7 @@
                       src="./assets/icons/engine-size.png"
                       height="20"
                       alt="Engine Size"
+                      aria-label="Engine Size Icon"
                     />1.8L Inline 4
                   </li>
                   <li>
@@ -231,6 +258,7 @@
                       src="./assets/icons/power.webp"
                       height="20"
                       alt="Power"
+                      aria-label="Power Icon"
                     />290PS
                   </li>
                 </ul>
@@ -250,11 +278,13 @@
                   src="./assets/images/badges/subaru-logo-100px.webp"
                   height="25"
                   alt="Subaru Logo"
+                  aria-label="Subaru Logo"
                 />
                 <img
                   src="./assets/images/badges/sti-logo.webp"
                   height="20"
                   alt="STI Logo"
+                  aria-label="STI Logo"
                 />
               </div>
             </figure>
@@ -267,6 +297,7 @@
                       src="./assets/icons/top-speed.webp"
                       height="20"
                       alt="Top Speed"
+                      aria-label="Top Speed Icon"
                     />218km/h
                   </li>
                   <li>
@@ -274,6 +305,7 @@
                       src="./assets/icons/weight.webp"
                       height="20"
                       alt="Weight"
+                      aria-label="Weight Icon"
                     />2070kg
                   </li>
                   <li>
@@ -281,6 +313,7 @@
                       src="./assets/icons/engine-size.png"
                       height="20"
                       alt="Engine Size"
+                      aria-label="Engine Size Icon"
                     />2L Inline 6
                   </li>
                   <li>
@@ -288,6 +321,7 @@
                       src="./assets/icons/power.webp"
                       height="20"
                       alt="Power"
+                      aria-label="Power Icon"
                     />467PS
                   </li>
                 </ul>
@@ -307,11 +341,13 @@
                   src="./assets/images/badges/toyota-logo.webp"
                   height="25"
                   alt="Toyota Logo"
+                  aria-label="Toyota Logo"
                 />
                 <img
                   src="./assets/images/badges/altezza-logo.webp"
                   height="10"
                   alt="Altezza Logo"
+                  aria-label="Altezza Logo"
                 />
               </div>
             </figure>
@@ -324,6 +360,7 @@
                       src="./assets/icons/top-speed.webp"
                       height="20"
                       alt="Top Speed"
+                      aria-label="Top Speed Icon"
                     />190km/h
                   </li>
                   <li>
@@ -331,6 +368,7 @@
                       src="./assets/icons/weight.webp"
                       height="20"
                       alt="Weight"
+                      aria-label="Weight Icon"
                     />2100kg
                   </li>
                   <li>
@@ -338,6 +376,7 @@
                       src="./assets/icons/engine-size.png"
                       height="20"
                       alt="Engine Size"
+                      aria-label="Engine Size Icon"
                     />2.2L Inline 6
                   </li>
                   <li>
@@ -345,6 +384,7 @@
                       src="./assets/icons/power.webp"
                       height="20"
                       alt="Power"
+                      aria-label="Power Icon"
                     />360PS
                   </li>
                 </ul>
@@ -363,12 +403,14 @@
                 <img
                   src="./assets/images/badges/subaru-logo-100px.webp"
                   height="25"
-                  alt="Toyota Logo"
+                  alt="Subaru Logo"
+                  aria-label="Subaru Logo"
                 />
                 <img
                   src="./assets/images/badges/sti-logo.webp"
                   height="20"
-                  alt="Altezza Logo"
+                  alt="STI Logo"
+                  aria-label="STI Logo"
                 />
               </div>
             </figure>
@@ -381,6 +423,7 @@
                       src="./assets/icons/top-speed.webp"
                       height="20"
                       alt="Top Speed"
+                      aria-label="Top Speed Icon"
                     />220km/h
                   </li>
                   <li>
@@ -388,6 +431,7 @@
                       src="./assets/icons/weight.webp"
                       height="20"
                       alt="Weight"
+                      aria-label="Weight Icon"
                     />2150kg
                   </li>
                   <li>
@@ -395,6 +439,7 @@
                       src="./assets/icons/engine-size.png"
                       height="20"
                       alt="Engine Size"
+                      aria-label="Engine Size Icon"
                     />2.2L Inline 6
                   </li>
                   <li>
@@ -402,6 +447,7 @@
                       src="./assets/icons/power.webp"
                       height="20"
                       alt="Power"
+                      aria-label="Power Icon"
                     />390PS
                   </li>
                 </ul>
@@ -481,13 +527,21 @@
                     <span><i class="fa-solid fa-envelope"></i></span>Email
                     Address
                   </h5>
-                  <a href="mailto:contact@m-buildz.com">contact@m-buildz.com</a>
+                  <a
+                    href="mailto:contact@m-buildz.com"
+                    aria-label="Link to send email (opens in a new tab)"
+                    >contact@m-buildz.com</a
+                  >
                 </div>
                 <div id="phone">
                   <h5>
                     <span><i class="fa-solid fa-phone"></i></span>Phone Number
                   </h5>
-                  <a href="tel:+353831437489">+353831437489</a>
+                  <a
+                    href="tel:+353831437489"
+                    aria-label="Link to Call (opens in a new tab)"
+                    >+3538314357489</a
+                  >
                 </div>
               </div>
             </div>
