Add further comments of separate sections and articles to index.html

--- a/index.html
+++ b/index.html
@@ -72,18 +72,24 @@
     </header>
     <!-- Main Section -->
     <main>
+      <!-- Hero Section -->
       <section id="hero-section" class="section-wrapper">
         <header id="slogan">
           <h1>We build cars<br />that <span>drift</span></h1>
         </header>
       </section>
+      <!-- Cars Section -->
       <section id="cars">
         <header class="hidden">
           <h2>Cars</h2>
         </header>
+        <!-- Card Wrapper -->
         <div id="card-wrapper">
+          <!-- Card -->
           <article class="card">
+            <!-- Card Image -->
             <figure class="card-image" id="vw-golf">
+              <!-- Car Badges -->
               <div class="badges">
                 <img
                   src="./assets/images/badges/volkswagen-logo.png"
@@ -99,7 +105,9 @@
                 />
               </div>
             </figure>
+            <!-- Car Information -->
             <div class="car-information">
+              <!-- Car Stats -->
               <div class="car-stats">
                 <h4>Volkswagen Golf</h4>
                 <ul class="car-stats-list">
@@ -137,6 +145,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- Car Description -->
               <div class="car-description">
                 <p>
                   The VW Golf epitomizes luxury and performance, boasting a
@@ -462,15 +471,18 @@
           </article>
         </div>
       </section>
+      <!-- Contact Us Section -->
       <section id="contact-us" class="section-outer-wrapper">
         <header class="hidden">
           <h2>Contact Us</h2>
         </header>
+        <!-- First Row Wrap -->
         <div class="row-1-wrap">
           <article id="contact-form" class="article-wrapper">
             <header>
               <h3>Contact Form</h3>
             </header>
+            <!-- Contact Form -->
             <form
               id="contact-us-form"
               name="contact-us-form"
@@ -510,11 +522,13 @@
               <input class="submit" type="submit" value="Send it!" />
             </form>
           </article>
+          <!-- Contact Information -->
           <article id="contact-information" class="article-wrapper">
             <header>
               <h3>Contact Information</h3>
             </header>
             <div class="row-1-wrap-address">
+              <!-- Address -->
               <div id="address">
                 <h5>
                   <span><i class="fa-solid fa-location-dot"></i></span>Address
@@ -524,6 +538,7 @@
                 </address>
               </div>
               <div id="email-and-number">
+                <!-- Email Address -->
                 <div id="email-address">
                   <h5>
                     <span><i class="fa-solid fa-envelope"></i></span>Email
@@ -535,6 +550,7 @@
                     >contact@m-buildz.com</a
                   >
                 </div>
+                <!-- Phone Number -->
                 <div id="phone">
                   <h5>
                     <span><i class="fa-solid fa-phone"></i></span>Phone Number
@@ -547,10 +563,12 @@
                 </div>
               </div>
             </div>
+            <!-- Opening Hours -->
             <div id="opening-hours">
               <h5>
                 <span><i class="fa-regular fa-clock"></i></span>Opening Hours
               </h5>
+              <!-- Opening Hour Table -->
               <table class="timetable">
                 <tr>
                   <td>Monday:</td>
@@ -594,7 +612,9 @@
             </div>
           </article>
         </div>
+        <!-- Second Row Wrap -->
         <div id="row-2-wrap">
+          <!-- Google Maps -->
           <article id="google-map" class="article-wrapper">
             <header class="hidden">
               <h3>Google Maps</h3>
@@ -615,6 +635,7 @@
     </main>
     <!-- Footer Section-->
     <footer>
+      <!-- Social Media Links -->
       <ul id="socials">
         <li>
           <a
@@ -657,6 +678,7 @@
           ></a>
         </li>
       </ul>
+      <!-- Copyright -->
       <p id="copyright">
         <i class="fa-regular fa-copyright"></i> M-BUILDZ 2024
       </p>
