Fix page logo name and update in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           aria-label="M-Buildz Logo button that leads to index.html"
         >
           <img
-            src="./assets/logos/m-buildz-logo-200px-0comp.webp"
+            src="./assets/logos/m-buildz-logo.webp"
             alt="M-Buildz Logo"
             title="M-Buildz Logo"
             id="logo"
@@ -154,6 +154,7 @@
               </div>
             </div>
           </article>
+          <!-- Card -->
           <article class="card">
             <figure class="card-image" id="bmw-m5">
               <div class="badges">
