--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </header>
         <!-- Card Wrapper -->
         <div id="card-wrapper">
-          <!-- Card -->
+          <!-- VW Golf Card -->
           <article class="card">
             <!-- Card Image -->
             <figure class="card-image" id="vw-golf">
@@ -154,9 +154,11 @@
               </div>
             </div>
           </article>
-          <!-- Card -->
+          <!-- BMW M5 Card -->
           <article class="card">
+            <!-- Card Image -->
             <figure class="card-image" id="bmw-m5">
+              <!-- Car Badges -->
               <div class="badges">
                 <img
                   src="./assets/images/badges/bmw-logo.webp"
@@ -172,7 +174,9 @@
                 />
               </div>
             </figure>
+            <!-- Car Information -->
             <div class="car-information">
+              <!-- Car Stats -->
               <div class="car-stats">
                 <h4>BMW M5</h4>
                 <ul class="car-stats-list">
@@ -210,6 +214,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- Car Description -->
               <div class="car-description">
                 <p>
                   The BMW M5 epitomizes luxury and performance, boasting a
@@ -218,8 +223,11 @@
               </div>
             </div>
           </article>
+          <!-- Honda Civic Card -->
           <article class="card">
+            <!-- Card Image -->
             <figure class="card-image" id="honda-civic">
+              <!-- Car Badges -->
               <div class="badges">
                 <img
                   src="./assets/images/badges/honda-logo.webp"
@@ -235,7 +243,9 @@
                 />
               </div>
             </figure>
+            <!-- Car Information -->
             <div class="car-information">
+              <!-- Car Stats -->
               <div class="car-stats">
                 <h4>Honda Civic</h4>
                 <ul class="car-stats-list">
@@ -273,6 +283,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- Car Description -->
               <div class="car-description">
                 <p>
                   The Honda Civic epitomizes luxury and performance, boasting a
@@ -281,8 +292,11 @@
               </div>
             </div>
           </article>
+          <!-- Subaru STI Card -->
           <article class="card">
+            <!-- Card Image -->
             <figure class="card-image" id="subaru-sti">
+              <!-- Car Badges -->
               <div class="badges">
                 <img
                   src="./assets/images/badges/subaru-logo-100px.webp"
@@ -298,7 +312,9 @@
                 />
               </div>
             </figure>
+            <!-- Car Information -->
             <div class="car-information">
+              <!-- Car Stats -->
               <div class="car-stats">
                 <h4>Subaru STI</h4>
                 <ul class="car-stats-list">
@@ -336,6 +352,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- Car Description -->
               <div class="car-description">
                 <p>
                   The Subaru STI epitomizes luxury and performance, boasting a
@@ -344,8 +361,11 @@
               </div>
             </div>
           </article>
+          <!-- Toyota Imprezza Card -->
           <article class="card">
+            <!-- Card Image -->
             <figure class="card-image" id="toyota-altezza">
+              <!-- Car Badges -->
               <div class="badges">
                 <img
                   src="./assets/images/badges/toyota-logo.webp"
@@ -361,7 +381,9 @@
                 />
               </div>
             </figure>
+            <!-- Car Information -->
             <div class="car-information">
+              <!-- Car Stats -->
               <div class="car-stats">
                 <h4>Toyota Altezza</h4>
                 <ul class="car-stats-list">
@@ -399,6 +421,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- Car Description -->
               <div class="car-description">
                 <p>
                   The Toyota Altezza epitomizes luxury and performance, boasting
@@ -407,8 +430,11 @@
               </div>
             </div>
           </article>
+          <!-- Subaru WRX STI Card -->
           <article class="card">
+            <!-- Card Image -->
             <figure class="card-image" id="wrx-sti">
+              <!-- Car Badges -->
               <div class="badges">
                 <img
                   src="./assets/images/badges/subaru-logo-100px.webp"
@@ -424,7 +450,9 @@
                 />
               </div>
             </figure>
+            <!-- Car Information -->
             <div class="car-information">
+              <!-- Car Stats -->
               <div class="car-stats">
                 <h4>WRX STI</h4>
                 <ul class="car-stats-list">
@@ -462,6 +490,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- Car Description -->
               <div class="car-description">
                 <p>
                   The WRX STI epitomizes luxury and performance, boasting a
