Add loading wheel to index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
     <title>M-Buildz</title>
   </head>
   <body>
+    <!-- Loading Wheel -->
+    <div id="loading">
+      <img
+        id="wheel"
+        src="./assets/images/loading-wheel.webp"
+        alt="loading wheel"
+        height="200"
+        width="200"
+      />
+    </div>
     <!-- Page Header -->
     <header class="site-navigation">
       <!-- Logo -->
