Add hidden table header row to opening hour table for accessibilty bug fix

--- a/index.html
+++ b/index.html
@@ -610,6 +610,13 @@
               </h5>
               <!-- Opening Hour Table -->
               <table class="timetable">
+                <tr class="hidden">
+                  <th>Day</th>
+                  <th>Open</th>
+                  <th class="dash">-</th>
+                  <th>Close</th>
+                </tr>
+
                 <tr>
                   <td>Monday:</td>
                   <td>10am</td>
