Fix headings order and anchor tags aria-labels for accessibilty bug fix

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <nav id="navigation-menu">
         <ul id="menu">
           <li class="active">
-            <a href="#hero-section" aria-label="Link to hero section">Home</a>
+            <a href="#hero-section" aria-label="Link to Home">Home</a>
           </li>
           <li><a href="#cars" aria-label="Link to Cars section">Cars</a></li>
           <li>
-            <a href="#contact-us" aria-label="Link to Conact Us section"
+            <a href="#contact-us" aria-label="Link to Contact Us section"
               >Contact Us</a
             >
           </li>
@@ -119,7 +119,7 @@
             <div class="car-information">
               <!-- Car Stats -->
               <div class="car-stats">
-                <h4>Volkswagen Golf</h4>
+                <h3>Volkswagen Golf</h3>
                 <ul class="car-stats-list">
                   <li>
                     <img
@@ -188,7 +188,7 @@
             <div class="car-information">
               <!-- Car Stats -->
               <div class="car-stats">
-                <h4>BMW M5</h4>
+                <h3>BMW M5</h3>
                 <ul class="car-stats-list">
                   <li>
                     <img
@@ -257,7 +257,7 @@
             <div class="car-information">
               <!-- Car Stats -->
               <div class="car-stats">
-                <h4>Honda Civic</h4>
+                <h3>Honda Civic</h3>
                 <ul class="car-stats-list">
                   <li>
                     <img
@@ -326,7 +326,7 @@
             <div class="car-information">
               <!-- Car Stats -->
               <div class="car-stats">
-                <h4>Subaru STI</h4>
+                <h3>Subaru STI</h3>
                 <ul class="car-stats-list">
                   <li>
                     <img
@@ -395,7 +395,7 @@
             <div class="car-information">
               <!-- Car Stats -->
               <div class="car-stats">
-                <h4>Toyota Altezza</h4>
+                <h3>Toyota Altezza</h3>
                 <ul class="car-stats-list">
                   <li>
                     <img
@@ -464,7 +464,7 @@
             <div class="car-information">
               <!-- Car Stats -->
               <div class="car-stats">
-                <h4>WRX STI</h4>
+                <h3>WRX STI</h3>
                 <ul class="car-stats-list">
                   <li>
                     <img
@@ -520,7 +520,7 @@
         <div class="row-1-wrap">
           <article id="contact-form" class="article-wrapper">
             <header>
-              <h3>Contact Form</h3>
+              <h2>Contact Form</h2>
             </header>
             <!-- Contact Form -->
             <form
@@ -565,14 +565,14 @@
           <!-- Contact Information -->
           <article id="contact-information" class="article-wrapper">
             <header>
-              <h3>Contact Information</h3>
+              <h2>Contact Information</h2>
             </header>
             <div class="row-1-wrap-address">
               <!-- Address -->
               <div id="address">
-                <h5>
+                <h4>
                   <span><i class="fa-solid fa-location-dot"></i></span>Address
-                </h5>
+                </h4>
                 <address>
                   16 Grand Park,<br />Clare,<br />Co.Clare,<br />Ireland
                 </address>
@@ -580,24 +580,24 @@
               <div id="email-and-number">
                 <!-- Email Address -->
                 <div id="email-address">
-                  <h5>
+                  <h4>
                     <span><i class="fa-solid fa-envelope"></i></span>Email
                     Address
-                  </h5>
+                  </h4>
                   <a
                     href="mailto:contact@m-buildz.com"
-                    aria-label="Link to send email (opens in a new tab)"
+                    aria-label="Link to send email to contact@m-buildz.com (opens in a new tab)"
                     >contact@m-buildz.com</a
                   >
                 </div>
                 <!-- Phone Number -->
                 <div id="phone">
-                  <h5>
+                  <h4>
                     <span><i class="fa-solid fa-phone"></i></span>Phone Number
-                  </h5>
+                  </h4>
                   <a
-                    href="tel:+353831437489"
-                    aria-label="Link to Call (opens in a new tab)"
+                    href="tel:+3538314357489"
+                    aria-label="Link to Call +3538314357489 (opens in a new tab)"
                     >+3538314357489</a
                   >
                 </div>
