Update car descriptions

--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
               <!-- Car Description -->
               <div class="car-description">
                 <p>
-                  The VW Golf epitomizes luxury and performance, boasting a
-                  potent twin-turbo V8 engine...
+                  One of our first builds was this gorgeous Volkswagen Golf. It
+                  has a 2.5L Inline 6 engine with 500PS and a top speed of
+                  203km/h.
                 </p>
               </div>
             </div>
@@ -227,8 +228,8 @@
               <!-- Car Description -->
               <div class="car-description">
                 <p>
-                  The BMW M5 epitomizes luxury and performance, boasting a
-                  potent twin-turbo V8 engine...
+                  Our BMW M5 is a beast. It has a 3.5L V8 engine with 600PS and
+                  a top speed of 225km/h.
                 </p>
               </div>
             </div>
@@ -296,8 +297,8 @@
               <!-- Car Description -->
               <div class="car-description">
                 <p>
-                  The Honda Civic epitomizes luxury and performance, boasting a
-                  potent twin-turbo V8 engine...
+                  This yellow Honda Civic is a real head turner. It has a 1.8L
+                  inline 4 engine with 290PS and a top speed of 170km/h.
                 </p>
               </div>
             </div>
@@ -365,8 +366,8 @@
               <!-- Car Description -->
               <div class="car-description">
                 <p>
-                  The Subaru STI epitomizes luxury and performance, boasting a
-                  potent twin-turbo V8 engine...
+                  The Subaru STI is a classic rally car. With 467PS and a top
+                  speed of 218km/h, it's sure to attract attention.
                 </p>
               </div>
             </div>
@@ -434,8 +435,8 @@
               <!-- Car Description -->
               <div class="car-description">
                 <p>
-                  The Toyota Altezza epitomizes luxury and performance, boasting
-                  a potent twin-turbo V8 engine...
+                  Our Toyota Altezza is beauty. We took a 2.2L Inline 6 engine
+                  and tuned it to 360PS. It has a top speed of 190km/h.
                 </p>
               </div>
             </div>
@@ -503,8 +504,8 @@
               <!-- Car Description -->
               <div class="car-description">
                 <p>
-                  The WRX STI epitomizes luxury and performance, boasting a
-                  potent twin-turbo V8 engine...
+                  The WRX STI is a step above almost any other car you'll find
+                  on the road. With 390PS, it will leave you breathless.
                 </p>
               </div>
             </div>
