Fix input type in name input on contact form

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                 class="text-input"
                 id="name"
                 name="name"
-                type="name"
+                type="text"
                 required
                 placeholder="Name"
                 autocomplete="on"
