Add menu.js file and include it in index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       sizes="32x32"
       href="./assets/icons/favicon/favicon.ico"
     />
+    <script src="./assets/js/menu.js" defer></script>
     <!-- Page Title -->
     <title>M-Buildz</title>
   </head>
